# flbst-tg-bot

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  example.html  pyproject.toml  test_gutenberg.py
.cursor/rules/: general.mdc  uv.mdc
flibusta_bot/: __main__.py  config.py
flibusta_bot/db/: __init__.py  db.py  models.py  schemas.py
flibusta_bot/db/storage/: __init__.py  books.py  users.py
flibusta_bot/flibusta_parser/: app.py  html_parser.py  http_client.py  schemas.py
flibusta_bot/parsers/: __init__.py  base_http_client.py  http_client_schemas.py
flibusta_bot/parsers/flibusta/: app.py  html_parser.py  http_client.py  schemas.py
flibusta_bot/parsers/gutenberg/: app.py  html_parser.py  http_client.py  schemas.py
flibusta_bot/tg_bot/: app.py  bot.py  states.py  translator.py
flibusta_bot/tg_bot/filters/: __init__.py  i18n_filter.py
flibusta_bot/tg_bot/handlers/: __init__.py  user.py
flibusta_bot/tg_bot/keyboards/: __init__.py  books_listing.py  cancels.py  choose_download_format.py  items_listing.py  start.py
flibusta_bot/tg_bot/middlewares/: i118n.py
locales/ar/LC_MESSAGES/: tg-bot.ftl
locales/az/LC_MESSAGES/: tg-bot.ftl
locales/bg/LC_MESSAGES/: tg-bot.ftl
locales/de/LC_MESSAGES/: tg-bot.ftl
locales/en/LC_MESSAGES/: tg-bot.ftl
locales/es/LC_MESSAGES/: tg-bot.ftl
locales/fa/LC_MESSAGES/: tg-bot.ftl
migrations/: env.py
migrations/versions/: 145c81a5c874_add_additional_data_to_books_model.py  163450815302_init.py  23ed01f48d53_remove_books_lebrary_id.py  46094396d70d_init.py  86b258de15f3_init.py  bc28439775de_init.py
(+36 files in other folders)
