[project]
name = "flibusta-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiogramx>=3.1.3",
    "fluentogram>=1.2.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "lxml>=5.4.0",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "lxml-stubs>=0.5.1",
    "mypy>=1.15.0",
    "ruff>=0.11.10",
]

[dependency-groups]
dev = [
    "lxml-stubs>=0.5.1",
]
